2006-12-09  Sven Neumann  <sven@gimp.org>

	* In all files, changed the standard copyright notice to say
	"GIMP - The GNU Image Manipulation Program".

2006-12-07  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/re/re.c: Minor changes to quiet the compiler.

	* plug-ins/script-fu/tinyscheme/CHANGES: Updated to version from
	the 1.38 version of TinyScheme.

	* plug-ins/script-fu/tinyscheme/scheme.c: Added some changes from the
	1.38 version of TinyScheme. Added fix for bug #1589701 (reported on
	SourceForge.net).

	* plug-ins/script-fu/tinyscheme/scheme.h: Added a prototype to quiet
	the compiler. Added one change from the 1.38 version of TinyScheme.

2006-12-07  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpbrush.c (gimp_brush_class_init)
	* app/core/gimpbrushgenerated.c (gimp_brush_generated_new): gah,
	should use the right binary for testing. Fixes the new spacing
	property.

2006-12-07  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-user-install.c: when creating the user directory,
	create parent directories if they don't exist.

2006-12-07  Sven Neumann  <sven@gimp.org>

	* configure.in: require bind_textdomain_codeset(). Fixes bug #362983.

2006-12-07  Sven Neumann  <sven@gimp.org>

	* app/tools/gimp-tools.c (gimp_tools_save): reverted my last change;
	will have to address this differently.

2006-12-06  Sven Neumann  <sven@gimp.org>

	* app/tools/gimp-tools.c (gimp_tools_save): only write a .presets
	file if the presets container is not empty.

2006-12-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/xpm.c: applied patch by Min Sik Kim. Fixes build
	with Quartz GDK backend (bug #382929).	

2006-12-06  Michael Natterer  <mitch@gimp.org>

	* libgimpconfig/gimpconfig-utils.c: don't cast the return value of
	g_value_get_object(), it's a gpointer.

2006-12-06  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpbrush.c: made "spacing" a property.

	* app/core/gimpbrushgenerated-save.c
	* app/core/gimpbrushgenerated.c