@@ -1,3 +1,7 @@
+2006-12-09  Sven Neumann  <sven@gimp.org>
+
+	* de.po: corrected.
+
 2006-12-07  Gabor Kelemen  <kelemeng@gnome.hu>
 
 	* hu.po: Translation updated.
