@@ -1,5 +1,14 @@
 2006-12-09  Sven Neumann  <sven@gimp.org>
 
+	* app/gui/gui.c: use "GIMP" instead of "The GIMP".
+
+	* app/core/gimpimagefile.c (gimp_imagefile_save_thumb): use "GIMP"
+	in the 'Software' tag when writing thumbnails.
+
+	* app/composite/gimp-composite.html: removed outdated document.
+
+2006-12-09  Sven Neumann  <sven@gimp.org>
+
 	* In all files, changed the standard copyright notice to say
 	"GIMP - The GNU Image Manipulation Program".
 
